# emoji-sentiment

./: MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: pypi.yml  test.yml
src/: demo.py
src/emoji_sentiment/: __init__.py  emoji.py
tests/: test_emoji_sentiment.py
